# Morelia

./: .buildinfo  .gitignore  .readthedocs.yaml  BasicPodProtocol.py  CONTRIBUTING.md  LICENSE.md  Morelia.Commands.html  Morelia.Devices.SerialPorts.html  Morelia.Devices.html  Morelia.Parameters.html  Morelia.Stream.html  Morelia.Stream.sink.html  Morelia.html  Morelia.packet.data.html  Morelia.packet.html  Morelia.packet.legacy.html  Morelia.signal.html  PythonEnviornmentTips.txt  README.md  README.rst  Serial_InOut.py  Test_COM_io.py  genindex.html  getting_started.html  index.html  modules.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  sleep_dep.html  stimulus.html  streaming.html
.github/workflows/: documentation.yml
Basics/: COMport_InOut.py  POD_io.py  ReadWrite.py  Serial_InOut.py  Test_COM_io.py
Code/: BasicPodProtocol.py  Example-using_Setup_8206HR.py  PodCommands.py  PodDevice_8206HR.py  PodPacketHandling.py  SerialCommunication.py  Setup_8206HR.py  Test_COM_io.py  Testing.py  requirements.txt
Code/API_Modules/: BasicPodProtocol.py  (+23 more)
Documents/: .$UML-class-diagram.drawio.bkp  PyEnvRequirements.txt  Python-POD-API_Documentation.xlsx  PythonEnviornmentTips.txt  UML-class-diagram.drawio
SphinxDocs/: BasicPodProtocol.rst  Morelia.Devices.SerialPorts.rst  PodApi.Commands.rst  PodApi.Devices.SerialPorts.rst  PodApi.Devices.rst  PodApi.Packets.rst  PodApi.Parameters.rst  PodApi.Stream.Drain.PodHandler.rst  PodApi.Stream.Drain.rst  PodApi.rst  PodCommands.rst  PodDevice_8206HR.rst  PodDevice_8229.rst  PodDevice_8401HR.rst  Setup.Inputs.rst  Setup.SetupOneDevice.rst  Setup.rst  Setup_8206HR.rst  Setup_8229.rst  Setup_8401HR.rst  Setup_8480SC.rst  Setup_PodDevices.rst  Setup_PodInterface.rst  Setup_PodParameters.rst  conf.py  index.rst  modules.rst
_sources/: Morelia.packet.rst.txt  Morelia.rst.txt  Morelia.signal.rst.txt  index.rst.txt  modules.rst.txt  streaming.rst.txt
docs/: Makefile
tests/: test_binary_8206hr_pod_packet.py  test_control_packet.py  test_conversion.py  test_data_packet_8206hr.py  test_data_packet_8401hr.py  test_pod_packet.py
(+592 files in other folders)
