[project]
name = "Python-POD-API"
version = "v1.1.1"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
authors = [
  {name = "Thresa Kelly"}, 
  {name = "Sree Kondi"},
  {name = "Seth Gabbert"}
]
maintainers = [
  {name = "Thresa Kelly"}
]

[tool.setuptools]
package-dir = {"" = "Code/API_Modules"}

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/Pinnacle-Technology-Inc/Python-POD-API"