[project]
name = "Morelia"
version = "v1.6.1"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
authors = [{name = "Thresa Kelly"}, {name = "Sree Kondi"}, {name = "James Hurd"}, {name = "Seth Gabbert"}, {name="Sam Groth"]
maintainers = [{name = "James Hurd"}, {name = "Sam Groth"]

[tool.setuptools]
package-dir = {"" = "Morelia"}

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/Pinnacle-Technology-Inc/Morelia"
